--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#">Bienvenida</a></li>
                 <li><a href="#">Galería</a></li>
-                <li><a href="#">Información de Proyecto</a></li>
+                <li><a href="contenido.html">Reciclaje</a></li>
                 <li><a href="#">Quiénes somos</a></li>
                 <li><a href="#">Contactos</a></li>
             </ul>
