--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Bienvenida</a></li>
                 <li><a href="#">Galería</a></li>
                 <li><a href="contenido.html">Reciclaje</a></li>
-                <li><a href="#">Quiénes somos</a></li>
+                <li><a href="somos.html">Quiénes somos</a></li>
                 <li><a href="#">Contactos</a></li>
             </ul>
         </nav>
